app/ingress/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #app.kubernetes.io/name: nginx-ingress
    #nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #acme.cert-manager.io/http01-edit-in-place: "true"
    #external-dns.alpha.kubernetes.io/hostname: md.tradevisdemo.link
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: app.tradevisdemo.link
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world
              port:
                number: 80
  tls:
  - hosts:
    - app.tradevisdemo.link
    secretName: "tls-secret"
